--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "chess.js": "^0.13.2",
+    "chessops": "^0.12.1",
+    "fen-chess-board": "^2.0.5",
+    "fen-reader": "^1.0.0-beta",
     "ngx-chess-board": "^2.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -27,8 +31,9 @@
     "@angular-devkit/build-angular": "~13.2.2",
     "@angular/cli": "~13.2.2",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/chess.js": "^0.13.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.52",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
